--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4500",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
-    "start": "next start",
+    "start": "next start -p 4500",
     "typecheck": "tsc --noEmit",
     "lint": "next lint",
     "jest": "jest",
@@ -18,11 +18,29 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.1.1",
-    "@mantine/hooks": "7.1.1",
+    "@mantine/carousel": "^7.1.2",
+    "@mantine/code-highlight": "^7.1.2",
+    "@mantine/core": "^7.1.2",
+    "@mantine/dates": "^7.1.2",
+    "@mantine/dropzone": "^7.1.2",
+    "@mantine/ds": "^7.1.2",
+    "@mantine/form": "^7.1.2",
+    "@mantine/hooks": "^7.1.2",
+    "@mantine/modals": "^7.1.2",
+    "@mantine/notifications": "^7.1.2",
+    "@mantine/nprogress": "^7.1.2",
+    "@mantine/spotlight": "^7.1.2",
+    "@mantine/tiptap": "^7.1.2",
     "@next/bundle-analyzer": "^13.5.3",
-    "@tabler/icons-react": "^2.20.0",
+    "@tabler/icons-react": "^2.38.0",
+    "@tiptap/extension-link": "^2.1.11",
+    "@tiptap/react": "^2.1.11",
+    "@tiptap/starter-kit": "^2.1.11",
+    "dayjs": "^1.11.10",
+    "embla-carousel-react": "^8.0.0-rc14",
     "next": "13.5.3",
+    "next-auth": "^4.23.2",
+    "nodemailer": "^6.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -56,8 +74,8 @@
     "eslint-plugin-testing-library": "^5.11.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "postcss": "^8.4.23",
-    "postcss-preset-mantine": "1.8.0",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.8.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.8.8",
     "storybook": "^7.4.3",
